--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-footguard",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "Yeoman generator for single page application",
   "keywords": [
     "yeoman-generator",
@@ -16,7 +16,9 @@
   ],
   "homepage": "https://github.com/mazerte/generator-footguard",
   "bugs": "https://github.com/mazerte/generator-footguard/issues",
-  "author": "Mathieu Desvé",
+  "author": {
+    "name": "Mathieu Desvé"
+  },
   "main": "app/index.js",
   "repository": {
     "type": "git",
@@ -26,7 +28,11 @@
     "test": "mocha test"
   },
   "dependencies": {
-    "yeoman-generator": "~0.10.2"
+    "yeoman-generator": "~0.10.2",
+    "path": "~0.4.9",
+    "util": "~0.4.9",
+    "underscore.inflections": "~0.1.4",
+    "grunt": "~0.4.0"
   },
   "devDependencies": {
     "mocha": "~1.8.1"
@@ -38,5 +44,9 @@
     {
       "type": "BSD"
     }
-  ]
+  ],
+  "readme": "# Footguard generator\n\nMaintainer: [Mathieu Desvé](https://github.com/mazerte)\n\nBased on [yeoman-generator](https://github.com/yeoman/yeoman-generator/)\n\n## Usage\n\nFirst make a new directory, and `cd` into it:\n```\nmkdir my-new-project && cd $_\n```\n\nThen install `generator-footguard`:\n```\nnpm install generator-footguard\n```\n\nRun `yo footguard`, optionally passing an app name:\n```\nyo footguard\n```\n\nFinally, install npm and bower dependencies:\n```\nnpm install && bower install --dev\n```\n\n## Generators\n\nAvailable generators:\n\n* [footguard](#app) (aka [footguard:app](#app))\n* [footguard:collection](#collection)\n* [footguard:model](#model)\n* [footguard:helper](#helper)\n* [footguard:view](#view)\n\n## Commands\n\nAvailable commands:\n\n* [yo server](#server)\n* [yo compile](#compile)\n* [yo build](#build)\n* [yo server-dist](#server-dist)",
+  "readmeFilename": "readme.md",
+  "_id": "generator-footguard@0.1.5",
+  "_from": "generator-footguard"
 }
