--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "path": "~0.4.9",
     "util": "~0.4.9",
     "underscore.inflections": "~0.1.4",
-    "grunt": "~0.4.0"
+    "grunt": "~0.4.0",
+    "mkdirp": "~0.3.5",
+    "underscore": "~1.4.4"
   },
   "devDependencies": {
     "mocha": "~1.8.1"
