--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -7,7 +7,7 @@
     "requirejs": "git://github.com/jrburke/requirejs#2.1.5",
     "raphael": "git://github.com/DmitryBaranovskiy/raphael.git#2.1.0",
     "modernizr": "git://github.com/Modernizr/Modernizr.git#2.6.2",
-    "bootstrap": "https://github.com/twbs/bootstrap#2.1.1",
+    "bootstrap": "git://github.com/twbs/bootstrap#2.1.1",
     "requirejs-text": "git://github.com/requirejs/text#2.0.5",
     "domReady": "git://github.com/requirejs/domReady.git#2.0.1",
     "underscore": "git://github.com/documentcloud/underscore.git#1.4.4"
