--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -5,7 +5,6 @@
   "devDependencies": {
     "path": "~0.4.9",
     "grunt": "~0.4.0",
-    "grunt-contrib-livereload": "~0.1.2",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-coffee": "~0.6.0",
     "grunt-contrib-compass": "~0.1.3",
@@ -21,7 +20,8 @@
     "grunt-requirejs": "~0.3.3",
     "grunt-open": "~0.2.0",
     "grunt-usemin": "~0.1.10",
-    "grunt-mocha": "~0.2.3"
+    "grunt-mocha": "~0.2.3",
+    "connect-livereload": "~0.2.0"    
   },
   "engines": {
     "node": ">=0.8.0"
