--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -17,11 +17,11 @@
     "grunt-contrib-htmlmin": "~0.1.1",
     "grunt-contrib-imagemin": "~0.1.2",
     "grunt-contrib-uglify": "~0.1.2",
-    "grunt-regarde": "~0.1.1",
-    "grunt-requirejs": "~0.3.3",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-open": "~0.2.0",
     "grunt-usemin": "~0.1.10",
-    "grunt-mocha": "~0.2.3"
+    "grunt-mocha": "~0.3.1"
   },
   "engines": {
     "node": ">=0.8.0"
