--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -5,23 +5,23 @@
   "devDependencies": {
     "path": "~0.4.9",
     "grunt": "~0.4.0",
-    "grunt-contrib-livereload": "~0.1.2",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-coffee": "~0.6.0",
-    "grunt-contrib-compass": "~0.1.3",
-    "grunt-contrib-less": "~0.5.0",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-connect": "~0.2.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-compass": "~0.5.0",
+    "grunt-contrib-less": "~0.7.0", 
+    "grunt-contrib-concat": "~0.3.0", 
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.4.1",
-    "grunt-contrib-htmlmin": "~0.1.1",
-    "grunt-contrib-imagemin": "~0.1.2",
-    "grunt-contrib-uglify": "~0.1.2",
-    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-imagemin": "~0.2.1",
+    "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-open": "~0.2.0",
     "grunt-usemin": "~0.1.10",
-    "grunt-mocha": "~0.3.1"
+    "grunt-mocha": "~0.4.1",
+    "connect-livereload": "~0.1.4"
   },
   "engines": {
     "node": ">=0.8.0"
