--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
 node_js:
   - "0.10"
+
+script: 
+  - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec 
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
