--- a/package.json
+++ b/package.json
@@ -36,10 +36,14 @@
     "path": "~0.4.9",
     "util": "~0.10.1",
     "underscore.inflections": "~0.2.1",
-    "grunt": "~0.4.0"
+    "grunt": "~0.4.0",
+    "coveralls": "~2.6.0",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "devDependencies": {
-    "mocha": "~1.15.1"
+    "mocha": "~1.15.1",
+    "istanbul": "~0.1.46",
+    "coveralls": "~2.6.0"
   },
   "engines": {
     "node": ">=0.8.0"
