--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "path": "~0.4.9",
     "util": "~0.10.1",
     "underscore.inflections": "~0.2.1",
-    "grunt": "~0.4.0",
-    "coveralls": "~2.6.0",
-    "mocha-lcov-reporter": "0.0.1"
+    "grunt": "~0.4.0"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
