--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,8 +1,7 @@
 {
   "name": "MyProject",
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "path": "~0.4.9",
     "grunt": "~0.4.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -25,5 +24,9 @@
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "scripts": {
+    "start": "grunt server",
+    "test": "grunt test"
   }
 }
