--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ node_js:
 script: 
   - ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec 
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+
+after_success:
+  - deploy_test.sh
