--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -20,7 +20,9 @@
     "grunt-open": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "grunt-mocha": "~0.4.1",
-    "connect-livereload": "~0.3.0"
+    "connect-livereload": "~0.3.0",
+    "mocha-phantom-coverage-reporter": "~0.0.1",
+    "grunt-coffeecov": "~0.0.2"
   },
   "engines": {
     "node": ">=0.8.0"
