--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -22,7 +22,8 @@
     "grunt-mocha": "~0.4.1",
     "connect-livereload": "~0.3.0",
     "mocha-phantom-coverage-reporter": "~0.0.1",
-    "grunt-coffeecov": "~0.0.2"
+    "grunt-coffeecov": "~0.0.3",
+    "coveralls": "~2.6.0"
   },
   "engines": {
     "node": ">=0.8.0"
