--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test": "mocha -R spec"
   },
   "dependencies": {
-    "yeoman-generator": "git://github.com/yeoman/generator",
+    "yeoman-generator": "git://github.com/mazerte/generator",
     "path": "~0.4.9",
     "util": "~0.10.1",
     "underscore.inflections": "~0.2.1",
