- Add KSS support - update KSS template like GitHub CSS Styleguide - and write documentation in readme file
ref to #16

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "workflow",
     "mocha",
     "unit test",
+    "kss",
     "app"
   ],
   "homepage": "https://github.com/mazerte/generator-footguard",
