--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-footguard",
+  "name": "generator-school-report",
   "version": "0.2.11",
   "description": "Yeoman generator for single page application",
   "keywords": [
