--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -11,7 +11,8 @@
     "requirejs-text": "~2.0.5",
     "requirejs-domready": "~2.0.1",
     "underscore": "~1.4.4",
-    "bourbon": "~3.1.8"
+    "bourbon": "~3.1.8",
+    "marked": "~0.3.1"
   },
   "devDependencies": {
     "chai": "~1.7.2",
