--- a/app/templates/bower.json
+++ b/app/templates/bower.json
@@ -12,7 +12,8 @@
     "requirejs-domready": "~2.0.1",
     "underscore": "~1.4.4",
     "bourbon": "~3.1.8",
-    "marked": "~0.3.1"
+    "marked": "~0.3.1",
+    "highlightjs": "~8.0.0"
   },
   "devDependencies": {
     "chai": "~1.7.2",
